--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,11 @@
     box-sizing: border-box;
 }
 
+a:hover {
+    background-color: #4aaaa5;
+    color: #fff;
+}
+
 body {
     background: url(https://www.toptal.com/designers/subtlepatterns/patterns/interlaced.png);
     font-size: 18px;
@@ -13,9 +18,11 @@ body {
 
 .container {
     width: 100%;
-    /* max-width: 960px; */
+    max-width: 960px;
     clear: both;
     margin: 0 auto; 
+
+
 
 }
 
@@ -41,10 +48,6 @@ h1 {
     padding-bottom: 20px;
 }
 
-h3 {
-    font-size: 22px;
-
-}
 
 #Main-Header {
     background: #ffffff;
@@ -100,8 +103,6 @@ nav a:first-child {
     max-width: 960px;
     margin: auto;
     margin-bottom: 300px;
-
-    
 }
 
 .auth-image {
@@ -126,13 +127,77 @@ footer {
     position: fixed;
 }
 
-#pp {
-    /* width: 280px; */
-    overflow: auto;
-    position: relative;
+
+.port {
+    height: auto;
+    margin-top: 10px;
+    margin-right: 25px;
+
+
+}
+.port img {
+    width: 100%;
+    border: 0 none;
+    opacity: .8;
     float: left;
-    /* margin: 20px 0 25px; */
+
 }
 
+.pp {
+ overflow: auto;
+ position: relative;
+ padding: 1px ;
+ margin: 20px 0 25px;
+ height: auto;
+ 
+
+ }
+
+ /* I could not figure out the floating of my images in the portfolio section. Whenever I tried floating my portfolio images "right", 
+ it immediately messed up the main contaner it was in. */
+
+   
+ h3 {
+    border-bottom: 0;
+    background: #4aaaa5;
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    bottom: 0px;
+    font-size: 14px;
+    width: 200px;
+    font-weight: 300;
 
 
+}
+
+li {
+    margin-bottom: 20px;
+
+}
+
+label,
+input[type=text],
+input[type=email],
+textarea {
+    width: 100%;
+}
+
+input[type=text],
+input[type=email],
+textarea {
+    height: 35px;
+    padding: o 10px;
+    font-size: 14px;
+}
+
+textarea {
+  height: 200px;  
+}
+input[type=submit] {
+    background: #4aaaa5;
+    font-size: 18px;
+    border: 0 none;
+    padding: 10px 30px;
+    cursor: pointer;
+}
